--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -494,22 +494,22 @@
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
     "    <tbody>\n",
     "        <tr>\n",
-    "            <td>1</td>\n",
-    "            <td>2</td>\n",
-    "            <td>3</td>\n",
-    "            <td style=\"background: blue; color: white;\">4</td>\n",
-    "            <td style=\"background: red; color: white;\">5</td>\n",
-    "            <td>6</td>\n",
-    "            <td>7</td>\n",
+    "            <td style=\"border: 1px solid black\">1</td>\n",
+    "            <td style=\"border: 1px solid black\">2</td>\n",
+    "            <td style=\"border: 1px solid black\">3</td>\n",
+    "            <td style=\"border: 1px solid black; background: blue; color: white;\">4</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">5</td>\n",
+    "            <td style=\"border: 1px solid black\">6</td>\n",
+    "            <td style=\"border: 1px solid black\">7</td>\n",
     "        </tr>\n",
     "        <tr>\n",
-    "            <td style=\"border: none;\">0</td>\n",
-    "            <td style=\"border: none;\">1</td>\n",
-    "            <td style=\"border: none;\">2</td>\n",
-    "            <td style=\"font-weight: bold; border: none;\">3</td>\n",
-    "            <td style=\"font-weight: bold; border: none\">4</td>\n",
-    "            <td style=\"border: none\">5</td>\n",
-    "            <td style=\"border: none\">6</td>\n",
+    "            <td style=\"background: white; border: none;\">0</td>\n",
+    "            <td style=\"background: white; border: none;\">1</td>\n",
+    "            <td style=\"background: white; border: none;\">2</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">3</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none\">4</td>\n",
+    "            <td style=\"background: white; border: none\">5</td>\n",
+    "            <td style=\"background: white; border: none\">6</td>\n",
     "        </tr>\n",
     "    </tbody>\n",
     "</table>"
@@ -545,36 +545,36 @@
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
     "    <tbody>\n",
     "        <tr>\n",
-    "            <td>1</td>\n",
-    "            <td>2</td>\n",
-    "            <td>3</td>\n",
-    "            <td style=\"background: blue; color: white;\">4</td>\n",
-    "            <td style=\"background: red; color: white;\">4</td>\n",
-    "            <td style=\"background: red; color: white;\">5</td>\n",
-    "            <td style=\"background: red; color: white;\">6</td>\n",
-    "            <td style=\"background: red; color: white;\">7</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
+    "            <td style=\"border: 1px solid black\">1</td>\n",
+    "            <td style=\"border: 1px solid black\">2</td>\n",
+    "            <td style=\"border: 1px solid black\">3</td>\n",
+    "            <td style=\"border: 1px solid black; background: blue; color: white;\">4</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">4</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">5</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">6</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">7</td>\n",
+    "            <td style=\"border: 1px solid black\">0</td>\n",
+    "            <td style=\"border: 1px solid black\">0</td>\n",
+    "            <td style=\"border: 1px solid black\">0</td>\n",
+    "            <td style=\"border: 1px solid black\">0</td>\n",
+    "            <td style=\"border: 1px solid black\">0</td>\n",
+    "            <td style=\"border: 1px solid black\">0</td>\n",
     "        </tr>\n",
     "        <tr>\n",
-    "            <td style=\"border: none;\">0</td>\n",
-    "            <td style=\"border: none;\">1</td>\n",
-    "            <td style=\"border: none;\">2</td>\n",
-    "            <td style=\"font-weight: bold; border: none;\">3</td>\n",
-    "            <td style=\"font-weight: bold; border: none\">4</td>\n",
-    "            <td style=\"font-weight: bold; border: none\">5</td>\n",
-    "            <td style=\"font-weight: bold; border: none\">6</td>\n",
-    "            <td style=\"font-weight: bold; border: none\">7</td>\n",
-    "            <td style=\"border: none\">8</td>\n",
-    "            <td style=\"border: none\">9</td>\n",
-    "            <td style=\"border: none\">10</td>\n",
-    "            <td style=\"border: none\">11</td>\n",
-    "            <td style=\"border: none\">12</td>\n",
-    "            <td style=\"border: none\">13</td>\n",
+    "            <td style=\"background: white; border: none;\">0</td>\n",
+    "            <td style=\"background: white; border: none;\">1</td>\n",
+    "            <td style=\"background: white; border: none;\">2</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">3</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">4</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">5</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">6</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">7</td>\n",
+    "            <td style=\"background: white; border: none;\">8</td>\n",
+    "            <td style=\"background: white; border: none;\">9</td>\n",
+    "            <td style=\"background: white; border: none;\">10</td>\n",
+    "            <td style=\"background: white; border: none;\">11</td>\n",
+    "            <td style=\"background: white; border: none;\">12</td>\n",
+    "            <td style=\"background: white; border: none;\">13</td>\n",
     "        </tr>\n",
     "    </tbody>\n",
     "</table>"
@@ -609,36 +609,36 @@
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
     "    <tbody>\n",
     "        <tr>\n",
-    "            <td>1</td>\n",
-    "            <td>2</td>\n",
-    "            <td>3</td>\n",
-    "            <td style=\"background: green; color: white;\">&infin;</td>\n",
-    "            <td style=\"background: red; color: white;\">4</td>\n",
-    "            <td style=\"background: red; color: white;\">5</td>\n",
-    "            <td style=\"background: red; color: white;\">6</td>\n",
-    "            <td style=\"background: red; color: white;\">7</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
-    "            <td>0</td>\n",
+    "            <td style=\"border: 1px solid black;\">1</td>\n",
+    "            <td style=\"border: 1px solid black;\">2</td>\n",
+    "            <td style=\"border: 1px solid black;\">3</td>\n",
+    "            <td style=\"border: 1px solid black; background: green; color: white;\">&infin;</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">4</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">5</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">6</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">7</td>\n",
+    "            <td style=\"border: 1px solid black;\">0</td>\n",
+    "            <td style=\"border: 1px solid black;\">0</td>\n",
+    "            <td style=\"border: 1px solid black;\">0</td>\n",
+    "            <td style=\"border: 1px solid black;\">0</td>\n",
+    "            <td style=\"border: 1px solid black;\">0</td>\n",
+    "            <td style=\"border: 1px solid black;\">0</td>\n",
     "        </tr>\n",
     "        <tr>\n",
-    "            <td style=\"border: none;\">0</td>\n",
-    "            <td style=\"border: none;\">1</td>\n",
-    "            <td style=\"border: none;\">2</td>\n",
-    "            <td style=\"font-weight: bold; border: none; color: green\">3</td>\n",
-    "            <td style=\"font-weight: bold; border: none;\">4</td>\n",
-    "            <td style=\"font-weight: bold; border: none\">5</td>\n",
-    "            <td style=\"font-weight: bold; border: none\">6</td>\n",
-    "            <td style=\"font-weight: bold; border: none\">7</td>\n",
-    "            <td style=\"border: none\">8</td>\n",
-    "            <td style=\"border: none\">9</td>\n",
-    "            <td style=\"border: none\">10</td>\n",
-    "            <td style=\"border: none\">11</td>\n",
-    "            <td style=\"border: none\">12</td>\n",
-    "            <td style=\"border: none\">13</td>\n",
+    "            <td style=\"background: white; border: none;\">0</td>\n",
+    "            <td style=\"background: white; border: none;\">1</td>\n",
+    "            <td style=\"background: white; border: none;\">2</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none; color: green\">3</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">4</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none\">5</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none\">6</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none\">7</td>\n",
+    "            <td style=\"background: white; border: none\">8</td>\n",
+    "            <td style=\"background: white; border: none\">9</td>\n",
+    "            <td style=\"background: white; border: none\">10</td>\n",
+    "            <td style=\"background: white; border: none\">11</td>\n",
+    "            <td style=\"background: white; border: none\">12</td>\n",
+    "            <td style=\"background: white; border: none\">13</td>\n",
     "        </tr>\n",
     "    </tbody>\n",
     "</table>"
