modified:   16. Linear Data Structures/Lists.ipynb

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -473,8 +473,20 @@
     "\n",
     "    }\n",
     "    //---------------------------------------------------------------------\n",
+    "    // Clear (delete) all of the array's elements\n",
+    "    public void Clear()\n",
+    "    {\n",
+    "\n",
+    "        // Point the array's object reference \n",
+    "        // to a newly allocated array sized to a default capacity\n",
+    "        this.array = new T[ DEFAULT_CAPACITY ];\n",
     "\n",
     "\n",
+    "        // Reset the count of occupied elements back to 0\n",
+    "        this.occupiedElements = 0;\n",
+    "\n",
+    "    }\n",
+    "    //---------------------------------------------------------------------\n",
     "\n",
     "}"
    ]
