modified:   16. Linear Data Structures/Lists.ipyn

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -352,14 +352,14 @@
     "public class ResizableArray<T>\n",
     "{\n",
     "\n",
-    "    // Field Definitions --------------------------------------------------\n",
+    "    // FIELD DEFINITIONS --------------------------------------------------\n",
     "    private T[] array;\n",
     "    private int occupiedElements;\n",
     "    private const int DEFAULT_CAPACITY = 4;\n",
     "    //---------------------------------------------------------------------\n",
     "\n",
     "\n",
-    "    // Property Definitions -----------------------------------------------\n",
+    "    // PROPERTY DEFINITIONS -----------------------------------------------\n",
     "    public int OccupiedElements\n",
     "    {\n",
     "        // Read Only\n",
@@ -371,7 +371,7 @@
     "    //---------------------------------------------------------------------\n",
     "\n",
     "\n",
-    "    // Constructor --------------------------------------------------------\n",
+    "    // CONSTRUCTOR --------------------------------------------------------\n",
     "    public ResizableArray( int capacity = DEFAULT_CAPACITY )\n",
     "    {\n",
     "        this.array = new T[ capacity ];\n",
@@ -380,7 +380,7 @@
     "    //---------------------------------------------------------------------\n",
     "\n",
     "\n",
-    "    // Methods ------------------------------------------------------------\n",
+    "    // METHODS ------------------------------------------------------------\n",
     "    // Double the size of the array, should it be determined to be full\n",
     "    public void ResizeIfArrayIsFull()\n",
     "    {\n",
