modified:   16. Linear Data Structures/Lists.ipynb

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -910,8 +910,8 @@
     "            <td style=\"background: white; border: none;\">0</td>\n",
     "            <td style=\"background: white; border: none;\">1</td>\n",
     "            <td style=\"background: white; border: none;\">2</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none;\">3</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none\">4</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none; color: blue\">3</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none; color: red\">4</td>\n",
     "            <td style=\"background: white; border: none\">5</td>\n",
     "            <td style=\"background: white; border: none\">6</td>\n",
     "            <td style=\"background: white; border: none\">7</td>\n",
@@ -963,8 +963,8 @@
     "            <td style=\"background: white; border: none;\">0</td>\n",
     "            <td style=\"background: white; border: none;\">1</td>\n",
     "            <td style=\"background: white; border: none;\">2</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none;\">3</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none;\">4</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none; color: blue\">3</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none; color: red\">4</td>\n",
     "            <td style=\"background: white; font-weight: bold; border: none;\">5</td>\n",
     "            <td style=\"background: white; font-weight: bold; border: none;\">6</td>\n",
     "            <td style=\"background: white; font-weight: bold; border: none;\">7</td>\n",
@@ -1006,20 +1006,20 @@
     "            <td style=\"border: 1px solid black;\">2</td>\n",
     "            <td style=\"border: 1px solid black;\">3</td>\n",
     "            <td style=\"border: 1px solid black; background: green; color: white;\">99</td>\n",
-    "            <td style=\"border: 1px solid black; background: red; color: white;\">4</td>\n",
-    "            <td style=\"border: 1px solid black; background: red; color: white;\">5</td>\n",
-    "            <td style=\"border: 1px solid black; background: red; color: white;\">6</td>\n",
-    "            <td style=\"border: 1px solid black; background: red; color: white;\">7</td>\n",
+    "            <td style=\"border: 1px solid black;\">4</td>\n",
+    "            <td style=\"border: 1px solid black;\">5</td>\n",
+    "            <td style=\"border: 1px solid black;\">6</td>\n",
+    "            <td style=\"border: 1px solid black;\">7</td>\n",
     "        </tr>\n",
     "        <tr>\n",
     "            <td style=\"background: white; border: none;\">0</td>\n",
     "            <td style=\"background: white; border: none;\">1</td>\n",
     "            <td style=\"background: white; border: none;\">2</td>\n",
     "            <td style=\"background: white; font-weight: bold; border: none; color: green\">3</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none;\">4</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none\">5</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none\">6</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none\">7</td>\n",
+    "            <td style=\"background: white; border: none;\">4</td>\n",
+    "            <td style=\"background: white; border: none;\">5</td>\n",
+    "            <td style=\"background: white; border: none;\">6</td>\n",
+    "            <td style=\"background: white; border: none;\">7</td>\n",
     "        </tr>\n",
     "    </tbody>\n",
     "</table>"
@@ -1102,6 +1102,200 @@
    "outputs": [],
    "source": [
     "resizableArray.RemoveAt(3);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table style=\"margin-left: auto; margin-right: auto;\">\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td style=\"border: 1px solid black;\">1</td>\n",
+    "            <td style=\"border: 1px solid black;\">2</td>\n",
+    "            <td style=\"border: 1px solid black;\">3</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">99</td>\n",
+    "            <td style=\"border: 1px solid black; background: blue; color: white;\">4</td>\n",
+    "            <td style=\"border: 1px solid black;\">5</td>\n",
+    "            <td style=\"border: 1px solid black;\">6</td>\n",
+    "            <td style=\"border: 1px solid black;\">7</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td style=\"background: white; border: none;\">0</td>\n",
+    "            <td style=\"background: white; border: none;\">1</td>\n",
+    "            <td style=\"background: white; border: none;\">2</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">3</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">4</td>\n",
+    "            <td style=\"background: white; border: none\">5</td>\n",
+    "            <td style=\"background: white; border: none\">6</td>\n",
+    "            <td style=\"background: white; border: none\">7</td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$$\\Huge{\\downarrow}$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table style=\"margin-left: auto; margin-right: auto;\">\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td style=\"border: 1px solid black\">1</td>\n",
+    "            <td style=\"border: 1px solid black\">2</td>\n",
+    "            <td style=\"border: 1px solid black\">3</td>\n",
+    "            <td style=\"border: 1px solid black; background: blue; color: white;\">4</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">5</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">6</td>\n",
+    "            <td style=\"border: 1px solid black; background: red; color: white;\">7</td>\n",
+    "            <td style=\"border: 1px solid black\">7</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td style=\"background: white; border: none;\">0</td>\n",
+    "            <td style=\"background: white; border: none;\">1</td>\n",
+    "            <td style=\"background: white; border: none;\">2</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">3</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">4</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">5</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">6</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">7</td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$$\\Huge{\\downarrow}$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table style=\"margin-left: auto; margin-right: auto;\">\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td style=\"border: 1px solid black\">1</td>\n",
+    "            <td style=\"border: 1px solid black\">2</td>\n",
+    "            <td style=\"border: 1px solid black\">3</td>\n",
+    "            <td style=\"border: 1px solid black\">4</td>\n",
+    "            <td style=\"border: 1px solid black\">5</td>\n",
+    "            <td style=\"border: 1px solid black\">6</td>\n",
+    "            <td style=\"border: 1px solid black\">7</td>\n",
+    "            <td style=\"border: 1px solid black; background: goldenrod; color: white;\">7</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td style=\"background: white; border: none;\">0</td>\n",
+    "            <td style=\"background: white; border: none;\">1</td>\n",
+    "            <td style=\"background: white; border: none;\">2</td>\n",
+    "            <td style=\"background: white; border: none;\">3</td>\n",
+    "            <td style=\"background: white; border: none;\">4</td>\n",
+    "            <td style=\"background: white; border: none;\">5</td>\n",
+    "            <td style=\"background: white; border: none;\">6</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none; color: goldenrod\">7</td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$$\\Huge{\\downarrow}$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table style=\"margin-left: auto; margin-right: auto;\">\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td style=\"border: 1px solid black\">1</td>\n",
+    "            <td style=\"border: 1px solid black\">2</td>\n",
+    "            <td style=\"border: 1px solid black\">3</td>\n",
+    "            <td style=\"border: 1px solid black\">4</td>\n",
+    "            <td style=\"border: 1px solid black\">5</td>\n",
+    "            <td style=\"border: 1px solid black\">6</td>\n",
+    "            <td style=\"border: 1px solid black\">7</td>\n",
+    "            <td style=\"border: 1px solid black; background: green; color: white;\">0</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td style=\"background: white; border: none;\">0</td>\n",
+    "            <td style=\"background: white; border: none;\">1</td>\n",
+    "            <td style=\"background: white; border: none;\">2</td>\n",
+    "            <td style=\"background: white; border: none;\">3</td>\n",
+    "            <td style=\"background: white; border: none;\">4</td>\n",
+    "            <td style=\"background: white; border: none;\">5</td>\n",
+    "            <td style=\"background: white; border: none;\">6</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none; color: green\">7</td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
    ]
   },
   {
